feat: integration module rename

--- a/apps/web/src/pages/integration/style.less
+++ b/apps/web/src/pages/integration/style.less
@@ -1,4 +1,4 @@
-.@{prefix}-view.@{prefix}-view-setting {
+.@{prefix}-view.@{prefix}-view-integration {
     display: flex;
     flex-direction: column;
     padding: 0;
