feat: role main tab ui design phase 1

--- a/apps/web/src/pages/user-role/views/role/style.module.less
+++ b/apps/web/src/pages/user-role/views/role/style.module.less
@@ -55,7 +55,7 @@
 
     .main {
         flex: 1;
-        padding: @padding-lg;
+        padding: 0 @padding-lg @padding-lg;
     }
 
     .empty {
