feat: tab panel layout ui design

--- a/apps/web/src/pages/user-role/views/role/style.module.less
+++ b/apps/web/src/pages/user-role/views/role/style.module.less
@@ -56,7 +56,8 @@
     .main {
         flex: 1;
         max-width: calc(100% - 240px);
-        padding: 0 @padding-lg @padding-lg;
+        height: 100%;
+        padding-left: @padding-lg;
     }
 
     .empty {
