--- a/apps/web/src/plugin/config-plugin/style.less
+++ b/apps/web/src/plugin/config-plugin/style.less
@@ -25,7 +25,7 @@
 
     &-right {
         width: 400px;
-        padding: @padding-sm @padding-lg 56px;
+        padding: 0 @padding-lg 56px;
         overflow-y: auto;
         border-top: 1px solid var(--border-color-base);
     }
