feat: Optimize the logic and style of the custom entity addition dialog

--- a/apps/web/src/pages/entity/style.less
+++ b/apps/web/src/pages/entity/style.less
@@ -64,6 +64,12 @@
         margin-bottom: @margin-xl;
     }
 
+    &-add-modal-form-boolean-label {
+        display: flex;
+        align-items: center;
+        height: 40px;
+    }
+
     &-main {
         margin: @margin-lg;
         background: var(--main-background);
