--- a/packages/shared/src/components/form/style.less
+++ b/packages/shared/src/components/form/style.less
@@ -5,11 +5,15 @@
         .MuiFormHelperText-root {
             margin-left: 0;
         }
+
+        .MuiFormControl-root.MuiTextField-root {
+            margin: 0;
+        }
     }
 
     &-box {
         position: relative;
-        padding: @padding-md @padding-sm @padding-sm;
+        padding: @padding-md @padding-sm @padding-md;
         margin-bottom: @margin-md;
         border: 1px solid rgba(0,0,0, 0.23);
         border-radius: @border-radius-base;
@@ -28,6 +32,10 @@
             .MuiFormControl-root {
                 margin: 0;
             }
+        }
+
+        &-contain {
+            margin-bottom: -@margin-xl;
         }
     }
 
