feat: user roles api phase 1

--- a/apps/web/src/pages/user-role/views/role/style.module.less
+++ b/apps/web/src/pages/user-role/views/role/style.module.less
@@ -8,7 +8,7 @@
         padding: @padding-lg;
         border-right: @border-base;
 
-        .role-wrapper {
+        .role-container {
             display: flex;
             flex-direction: column;
             max-height: calc(100% - 120px);
@@ -65,5 +65,9 @@
         flex: 1;
         align-items: center;
         justify-content: center;
+    }
+
+    .empty-role {
+        height: 185px;
     }
 }
