feat: optimise table transfer the selection effect

--- a/apps/web/src/components/table-transfer/style.less
+++ b/apps/web/src/components/table-transfer/style.less
@@ -41,4 +41,8 @@
         padding: @padding-xs @padding-md;
         color: var(--text-color-tertiary);
     }
+
+    &__gray-row {
+        color: var(--text-color-tertiary);
+    }
 }
