feat: Adds virtual scrolling to the physical drop-down component

--- a/apps/web/src/components/entity-select/components/entity-menu/style.less
+++ b/apps/web/src/components/entity-select/components/entity-menu/style.less
@@ -14,6 +14,8 @@
     }
 
     &__title {
+        width: 100%;
+        height: 22px;
         overflow: hidden;
         font-weight: @font-weight-regular;
         .text-size(@font-size-md);
