feat: The entity select component increases the maxCount props and dynamic menu height

--- a/apps/web/src/components/entity-select/components/entity-option/style.less
+++ b/apps/web/src/components/entity-select/components/entity-option/style.less
@@ -15,6 +15,11 @@
         background-color: var(--purple-1);
     }
 
+    &--disabled {
+        opacity: 0.38;
+        pointer-events: none;
+    }
+
     .ms-entity-option {
         display: flex;
         flex-direction: column;
