--- a/apps/web/src/components/entity-select/components/entity-menu-popper/style.less
+++ b/apps/web/src/components/entity-select/components/entity-menu-popper/style.less
@@ -1,7 +1,12 @@
 .ms-entity-menu-popper {
     .ms-entity-menu-paper {
         width: 360px;
-        max-height: 320px;
-        overflow: auto;
+        overflow: hidden;
+
+        &__list {
+            position: relative;
+            max-height: 40vh;
+            overflow: auto;
+        }
     }
 }
