--- a/apps/web/src/components/entity-select/components/entity-menu-popper/style.less
+++ b/apps/web/src/components/entity-select/components/entity-menu-popper/style.less
@@ -1,10 +1,12 @@
 .ms-entity-menu-popper {
+    z-index: 1300;
+
     .ms-entity-menu-paper {
         width: 360px;
         overflow: hidden;
 
         &__list {
-            position: relative;
+            width: 100%;
             max-height: 40vh;
             overflow: auto;
         }
