--- a/apps/web/src/components/entity-select/components/entity-option/style.less
+++ b/apps/web/src/components/entity-select/components/entity-option/style.less
@@ -13,6 +13,10 @@
         font-weight: @font-weight-medium;
         color: var(--text-color-main);
         background-color: var(--purple-1);
+
+        &:hover {
+            background-color: var(--purple-1);
+        }
     }
 
     &--disabled {
