feat: Resolve editor component css variable conflicts and Format the data in the action log component

--- a/apps/web/src/components/code-editor/components/editor/style.less
+++ b/apps/web/src/components/code-editor/components/editor/style.less
@@ -6,6 +6,10 @@
         outline: none;
     }
 
+    .cm-content {
+        padding-right: @padding-xs;
+    }
+
     .cm-editor {
         outline: none;
 
