fix: Optimize the rounded corners of the action log component

--- a/apps/web/src/pages/workflow/components/action-log/components/card/style.less
+++ b/apps/web/src/pages/workflow/components/action-log/components/card/style.less
@@ -17,6 +17,10 @@
             margin-top: 0;
             margin-bottom: @margin-xxs;
         }
+
+        &.MuiPaper-elevation {
+            border-radius: @border-radius-sm;
+        }
     }
 
     & &__header.MuiButtonBase-root {
