--- a/apps/web/src/pages/workflow/views/editor/components/handle/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/handle/style.less
@@ -87,8 +87,8 @@
 
     .react-flow__node:hover,
     .react-flow__node.selected {
-        .@{prefix}-workflow-handle.source,
-        .@{prefix}-workflow-handle.target.target-enable-add {
+        .@{prefix}-workflow-handle.source.addable,
+        .@{prefix}-workflow-handle.target.addable.target-addable {
             background-color: var(--component-background);
             border-radius: 16px;
             cursor: pointer;
