feat: optimize the node content render

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
@@ -14,6 +14,7 @@
             pointer-events: none;
         }
 
+        .@{prefix}-node-form-group-title,
         .@{prefix}-code-editor-header__operations {
             pointer-events: all;
         }
