--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/upstream-node-list/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/upstream-node-list/style.less
@@ -12,10 +12,12 @@
 
         .@{prefix}-upstream-node-list-item {
             display: flex;
+            width: 100%;
             .text-size(@font-size-base);
 
             .name {
-                max-width: 200px;
+                flex: 1;
+                width: 0;
             }
 
             .type {
