feat: ms lexical rich text editor phase 2

--- a/packages/shared/src/components/ms-editor/components/toolbar/components/font-size/style.less
+++ b/packages/shared/src/components/ms-editor/components/toolbar/components/font-size/style.less
@@ -12,6 +12,13 @@
             color: var(--icon-color-gray-tertiary);
         }
     }
+
+    &__size-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 208px;
+    }
 }
 
 .toolbar-size {
