--- a/packages/shared/src/components/ms-editor/components/toolbar/style.less
+++ b/packages/shared/src/components/ms-editor/components/toolbar/style.less
@@ -47,7 +47,7 @@
         &__icon {
             display: flex;
             padding: @padding-xxs;
-            font-size: @font-size-xxl;
+            font-size: @font-size-7;
         }
 
         &__btn {
