feat: Adjust the style of the action log component

--- a/apps/web/src/pages/workflow/components/action-log/components/card/style.less
+++ b/apps/web/src/pages/workflow/components/action-log/components/card/style.less
@@ -18,6 +18,11 @@
             margin-bottom: @margin-xxs;
         }
 
+        &.MuiAccordion-root.MuiPaper-elevation {
+            margin-top: 0;
+            margin-bottom: @margin-xxs;
+        }
+
         &.MuiPaper-elevation {
             border-radius: @border-radius-sm;
         }
