fix: Fixed an issue where the action log component was loaded twice by default

--- a/apps/web/src/pages/workflow/components/log-modal/style.less
+++ b/apps/web/src/pages/workflow/components/log-modal/style.less
@@ -12,8 +12,18 @@
 }
 
 .ms-log-container {
+    position: relative;
     display: flex;
     height: 100%;
+
+    .ms-log-flotage {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--main-background);
+    }
 
     .ms-log-loading,
     .ms-log-empty {
