--- a/packages/shared/src/components/ms-editor/style.less
+++ b/packages/shared/src/components/ms-editor/style.less
@@ -13,6 +13,8 @@
 
     h1 {
         display: block;
+        padding: 0;
+        margin: 0;
         font-size: @font-size-6;
         font-weight: @font-weight-bold;
         color: var(--text-color-primary);
@@ -21,6 +23,8 @@
 
     h2 {
         display: block;
+        padding: 0;
+        margin: 0;
         font-size: @font-size-xxl;
         font-weight: @font-weight-bold;
         color: var(--text-color-primary);
@@ -28,6 +32,9 @@
     }
 
     h3 {
+        display: block;
+        padding: 0;
+        margin: 0;
         font-size: @font-size-lg;
         color: var(--text-color-primary);
         .line-height(@font-size-lg);
