fix: generate different demo data base on different param type

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/test-drawer/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/test-drawer/style.less
@@ -56,6 +56,10 @@
             margin-bottom: @margin-xl;
         }
 
+        .@{mui-prefix}FormControl-root {
+            margin: 0 0 @margin-xl;
+        }
+
         .@{mui-prefix}Divider-root {
             margin: @margin-xl 0;
         }
