fix: optimize ServiceParamAssignInput component

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/service-param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/service-param-assign-input/style.less
@@ -1,4 +1,9 @@
 .@{prefix}-service-param-assign-input {
+    .@{prefix}-empty-img {
+        width: 96px;
+        height: 96px;
+    }
+
     .param-item {
         margin-top: @margin-md;
 
