--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -93,12 +93,10 @@
 
         &-operate {
             display: flex;
+            align-items: center;
+            justify-content: space-between;
             padding: 0 @padding-lg;
             margin-bottom: @margin-md;
-
-            &-left {
-                flex: 1;
-            }
         }
 
         &-empty {
@@ -143,7 +141,7 @@
                     padding: @padding-xxs;
                     margin-left: @margin-xs;
                     line-height: 0;
-                    color: rgba(0,0,0,.54);
+                    color: rgba(0, 0, 0, 0.54);
                     border: @border-base;
                     border-radius: 50%;
                     cursor: pointer;
@@ -167,7 +165,7 @@
     &-custom-resizable-handle {
         position: absolute;
         z-index: 10;
-            box-sizing: border-box;
+        box-sizing: border-box;
         width: 20px;
         height: 20px;
         padding: 0 3px 3px 0;
