feat: user permissions control entity custom data

--- a/apps/web/src/components/permission-control-disabled/style.less
+++ b/apps/web/src/components/permission-control-disabled/style.less
@@ -6,5 +6,12 @@
         opacity: 0.5;
         pointer-events: none;
         user-select: none;
+
+        /** override ms tooltip */
+        .@{prefix}-tooltip {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 }
