feat: use EmailContent component when the email node is testing

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/test-drawer/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/test-drawer/style.less
@@ -53,11 +53,6 @@
 
         .@{prefix}-code-editor {
             height: 200px;
-            margin-bottom: @margin-xl;
-        }
-
-        .@{mui-prefix}FormControl-root {
-            margin: 0 0 @margin-xl;
         }
 
         .@{mui-prefix}Divider-root {
@@ -66,6 +61,10 @@
 
         .@{mui-prefix}Alert-root {
             margin: @margin-xl 0;
+        }
+
+        .@{prefix}-config-panel-test-drawer-btn {
+            margin-top: @margin-xl;
         }
     }
 
