feat: render TextField or Select component in ConditionInput based on the reference value type

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -144,6 +144,7 @@
                     }
                 }
 
+                > .@{mui-prefix}InputBase-root,
                 > .@{mui-prefix}FormControl-root {
                     margin: 0;
                     margin-top: -1px;
