--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
@@ -13,30 +13,29 @@
         position: absolute;
         top: @margin-xs;
         left: @margin-sm;
-        max-width: calc(100% - 54px);
         border-radius: @border-radius-base;
 
         .@{mui-prefix}Chip-label {
             display: flex;
             align-items: center;
-            width: 100%;
             .text-size(@font-size-base);
 
             .name {
-                min-width: 8px;
-                max-width: calc(50% - 28px);
-            }
-
-            .divider {
                 display: block;
-                margin: 0 @margin-xxs;
-                color: var(--text-color-secondary);
+                max-width: 84px;
+                .ellipsis();
             }
 
-            .type {
-                font-size: @font-size-sm;
-                color: var(--text-color-tertiary);
-            }
+            // .divider {
+            //     display: block;
+            //     margin: 0 @margin-xxs;
+            //     color: var(--text-color-secondary);
+            // }
+
+            // .type {
+            //     font-size: @font-size-sm;
+            //     color: var(--text-color-tertiary);
+            // }
         }
     }
 
