--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
@@ -13,16 +13,12 @@
         position: absolute;
         top: @margin-xs;
         left: @margin-sm;
+        max-width: calc(100% - 72px);
         border-radius: @border-radius-base;
 
         .@{mui-prefix}Chip-label {
-            display: flex;
-            align-items: center;
-            .text-size(@font-size-base);
-
             .name {
                 display: block;
-                max-width: 84px;
                 .ellipsis();
             }
 
