fix: optimize the style of ParamSelect component

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -118,6 +118,10 @@
             .input-wrapper {
                 flex: 1;
 
+                // .@{mui-prefix}InputBase-input {
+                //     .text-size(@font-size-base);
+                // }
+
                 .select {
                     display: flex;
 
@@ -189,3 +193,11 @@
         border-bottom: 1px solid var(--border-color-base);
     }
 }
+
+// .@{prefix}-param-select-menu {
+//     .@{mui-prefix}List-root {
+//         .@{mui-prefix}MenuItem-root {
+//             .text-size(@font-size-base);
+//         }
+//     }
+// }
