feat: user role list layout ajustment

--- a/apps/web/src/pages/user-role/views/role/style.module.less
+++ b/apps/web/src/pages/user-role/views/role/style.module.less
@@ -11,13 +11,12 @@
         .role-container {
             display: flex;
             flex-direction: column;
-            max-height: calc(100% - 120px);
+            height: calc(100% - 120px);
             margin: @margin-lg 0;
             overflow: auto;
 
             .item {
                 display: flex;
-                flex: 1;
                 align-items: center;
                 justify-content: space-between;
                 padding: @padding-xs @padding-sm;
