chore: translate readme and code comments

--- a/packages/shared/src/styles/index.less
+++ b/packages/shared/src/styles/index.less
@@ -1,7 +1,8 @@
 /**
- * 多端复用样式资源
+ * Common Theme Variables
  *
- * 注意：shared/src/style 已通过工程处理将所有 Less Variables & Mixins 注入到
- * 全局中，可直接使用，无需再手动引入
+ * Note:
+ * The shared/src/style has been processed by the engineering tool to inject all Less Variables & Mixins
+ * into the global scope, you can use it directly without manually introducing it
  */
 @import url('./themes/index.less');
