--- a/packages/shared/src/styles/mixins.less
+++ b/packages/shared/src/styles/mixins.less
@@ -1,27 +1,28 @@
 /**
- * 通用 Mixin，已通过工程工具注入全局，可直接使用，无需手动引入
+ * Common Mixin，It has been injected into the global scope through the engineering tool,
+ * you can use it directly without manually introduce it
  */
 
 // ---------- Font ----------
-// 行高
+// Line Height
 .line-height(@font-size) {
     line-height: @font-size + 8;
 }
 
-// 字号&行高
+// Font Size & Line Height
 .text-size(@font-size) {
     font-size: @font-size;
     .line-height(@font-size);
 }
 
-// 单行省略号
+// Ellipsis single line
 .ellipsis() {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-// 多行省略号（非兼容所有浏览器）
+// Ellipsis multiple lines (Not compatible with all browsers)
 .multipleEllipsis(@line: 2) {
     display: box;
     display: -webkit-box;
@@ -32,7 +33,7 @@
     -webkit-line-clamp: @line;
 }
 
-// 必填项 * 号标识
+// Required mark *
 .required-mark(@color: var(--text-color-red), @font-size: @font-size-base) {
     display: inline-block;
     margin-right: @margin-xxs;
@@ -43,10 +44,12 @@
 }
 
 /**
- * @width：border宽度
- * @config：三角形位置及颜色配置
- * 比如，下箭头 `{ top: #f00 }`
- * 可根据自己的需要配置 config 值
+ * Triangle
+ * @width: Border width
+ * @config: The position and color of the triangle
+ *
+ * eg:
+ * - bottom arrow `{ top: #f00 }`
  */
 .triangle(@width, @config) {
     display: inline-block;
