--- a/packages/shared/src/styles/themes/dark/colors.less
+++ b/packages/shared/src/styles/themes/dark/colors.less
@@ -1,5 +1,5 @@
 :root[data-theme="dark"] {
-    // 蓝色
+    // Blue
     --blue-base: #5eafff;
     --blue-1: #052461;
     --blue-2: #083787;
@@ -12,7 +12,7 @@
     --blue-9: #D9F0FF;
     --blue-10: #F0F9FF;
 
-    // 深蓝色
+    // Dark Blue
     --geekblue-base: #3380cc;
     --geekblue-1: #000D26;
     --geekblue-2: #001C4D;
@@ -25,7 +25,7 @@
     --geekblue-9: #B1D8F2;
     --geekblue-10: #E6F6FF;
 
-    // 绿色
+    // Green
     --green-base: #40C776;
     --green-1: #002113;
     --green-2: #014726;
@@ -38,7 +38,7 @@
     --green-9: #BEEDCC;
     --green-10: #EBFAEF;
 
-    // 黄色
+    // Yellow
     --yellow-base: #ffd147;
     --yellow-1: #5E3700;
     --yellow-2: #855200;
@@ -51,7 +51,7 @@
     --yellow-9: #FFF6C2;
     --yellow-10: #FFFDEB;
 
-    // 橙色
+    // Orange
     --orange-base: #FF975E;
     --orange-1: #5E1505;
     --orange-2: #852308;
@@ -64,7 +64,7 @@
     --orange-9: #FFEAD9;
     --orange-10: #FFF7F0;
 
-    // 红色
+    // Red
     --red-base: #FF6661;
     --red-1: #590511;
     --red-2: #800915;
@@ -77,7 +77,7 @@
     --red-9: #FFE0DB;
     --red-10: #FFF2F0;
 
-    // 灰色
+    // Gray
     --gray-base: #f2f3f5;
     --gray-1: #1d2129;
     --gray-2: #272e3b;
@@ -90,7 +90,7 @@
     --gray-9: var(--gray-base);
     --gray-10: #f7f8fa;
 
-    // 青色
+    // Cyan
     --cyan-base: #3CE7FA;
     --cyan-1: #003E54;
     --cyan-2: #005E7A;
@@ -103,7 +103,7 @@
     --cyan-9: #B8FFFF;
     --cyan-10: #E6FFFE;
 
-    // 紫色
+    // Purple
     --purple-1: #F5F2FF;
     --purple-2: #EAE3FD;
     --purple-3: #DDD2FC;
@@ -116,7 +116,7 @@
     --purple-10: #462C8E;
     --purple-base: var(--purple-6);
 
-    // 透明灰
+    // Gray Transparent
     --gray-transparent-1: rgba(247, 248, 250, 0.04);
     --gray-transparent-2: rgba(247, 248, 250, 0.07);
     --gray-transparent-3: rgba(247, 248, 250, 0.15);
@@ -128,7 +128,7 @@
     --gray-transparent-9: rgba(247, 248, 250, 0.86);
     --gray-transparent-10: rgba(247, 248, 250, 0.95);
 
-    // 背景灰
+    // Gray Background
     --gray-background-1: #0C0C0C;
     --gray-background-2: #1C1C1C;
     --gray-background-3: #2C2C2C;
