--- a/packages/shared/src/styles/themes/index.less
+++ b/packages/shared/src/styles/themes/index.less
@@ -4,11 +4,15 @@
 /* stylelint-enable */
 
 /**
- * 注意：
- * 1. themes 目录下只应存放主题切换/颜色切换相关变量
- * 2. 本文件所有颜色相关变量值应引用 light/dark 中的变量定义（除特殊例外，如 白色、黑色）
- * 3. 若颜色变量随主题切换取值不同，则该变量应置于各主题目录下的 index.less 中
- * 4. 应优先使用语义化的色值变量，若无相应的语义化变量定义，则可在本文件或业务样式表的头部中新增（命名注意通用性）
+ * Note:
+ * 1. The themes directory should only contain theme switching/color switching related variables;
+ * 2. The color-related variables in this file should reference the variables defined in light/dark
+ * (except for special exceptions, such as white and black);
+ * 3. If the color variable takes a different value with the theme, it should be placed in
+ * the index.less file under the corresponding theme directory;
+ * 4. It is recommended to use semantic color variables first, and if there is no corresponding
+ * semantic variable definition, it can be added at the top of the business style sheet or in the
+ * head of this file (naming should be generality and semantic);
  */
 :root {
     // ---------- Colors ----------
