--- a/packages/shared/src/styles/variables.less
+++ b/packages/shared/src/styles/variables.less
@@ -1,9 +1,11 @@
 /**
- * 通用 Less 变量表
+ * Common Less Variables
  *
- * 注意：
- * 1. 所有颜色值需引用 themes 中相应的 CSS 变量，请勿自行定义
- * 2. 该 Less 变量表会通过相关工程工具注入全局中，可直接使用，无需手动引入
+ * Note:
+ * 1. All color values need to reference the corresponding CSS variable in themes, do not
+ * define them yourself;
+ * 2. The Less variable table will be injected into the global through related engineering tools,
+ * you can directly use it without manually importing it;
  */
 // ---------- Common ----------
 @prefix: ms;
