--- a/packages/shared/src/styles/themes/light/colors.less
+++ b/packages/shared/src/styles/themes/light/colors.less
@@ -1,5 +1,5 @@
 :root {
-    // 蓝色
+    // Blue
     --blue-base: #3491FA;
     --blue-1: #F0F9FF;
     --blue-2: #D9F0FF;
@@ -12,7 +12,7 @@
     --blue-9: #083787;
     --blue-10: #052461;
 
-    // 深蓝色
+    // Dark Blue
     --geekblue-base: #1261BE;
     --geekblue-1: #E6F6FF;
     --geekblue-2: #B1D8F2;
@@ -25,7 +25,7 @@
     --geekblue-9: #001C4D;
     --geekblue-10: #000D26;
 
-    // 绿色
+    // Green
     --green-base: #1EBA62;
     --green-1: #EBFAEF;
     --green-2: #BEEDCC;
@@ -38,7 +38,7 @@
     --green-9: #014726;
     --green-10: #002113;
 
-    // 黄色
+    // Yellow
     --yellow-base: #F7BA1E;
     --yellow-1: #FFFDEB;
     --yellow-2: #FFF6C2;
@@ -51,7 +51,7 @@
     --yellow-9: #855200;
     --yellow-10: #5E3700;
 
-    // 橙色
+    // Orange
     --orange-base: #F77234;
     --orange-1: #FFF7F0;
     --orange-2: #FFEAD9;
@@ -64,7 +64,7 @@
     --orange-9: #832308;
     --orange-10: #5E1505;
 
-    // 红色
+    // Red
     --red-base: #F13535;
     --red-1: #FFF2F0;
     --red-2: #FFE0DB;
@@ -77,7 +77,7 @@
     --red-9: #800915;
     --red-10: #590511;
 
-    // 灰色
+    // Gray
     --gray-base: #272E3B;
     --gray-1: #F7F8FA;
     --gray-2: #F2F3F5;
@@ -90,7 +90,7 @@
     --gray-9: var(--gray-base);
     --gray-10: #1D2129;
 
-    // 青色
+    // Cyan
     --cyan-base: #12D1EE;
     --cyan-1: #E6FFFE;
     --cyan-2: #B8FFFF;
@@ -103,7 +103,7 @@
     --cyan-9: #005E7A;
     --cyan-10: #003E54;
 
-    // 紫色
+    // Purple
     --purple-1: #F5F2FF;
     --purple-2: #EAE3FD;
     --purple-3: #DDD2FC;
@@ -116,7 +116,7 @@
     --purple-10: #462C8E;
     --purple-base: var(--purple-7);
 
-    // 透明灰
+    // Gray Transparent
     --gray-transparent-1: rgba(29, 33, 41, 0.03);
     --gray-transparent-2: rgba(29, 33, 41, 0.07);
     --gray-transparent-3: rgba(29, 33, 41, 0.15);
@@ -128,7 +128,7 @@
     --gray-transparent-9: rgba(29, 33, 41, 0.86);
     --gray-transparent-10: rgba(29, 33, 41, 0.95);
 
-    // 背景灰
+    // Gray Background
     --gray-background-1: #0C0C0C;
     --gray-background-2: #1C1C1C;
     --gray-background-3: #2C2C2C;
