fix: modify the color of disabled checkbox

--- a/apps/web/src/components/table-pro/style.less
+++ b/apps/web/src/components/table-pro/style.less
@@ -67,5 +67,11 @@
                 .ellipsis();
             }
         }
+
+        .@{mui-prefix}DataGrid-cellCheckbox {
+            .@{mui-prefix}Checkbox-root.@{mui-prefix}-disabled {
+                color: var(--border-color-gray);
+            }
+        }
     }
 }
