feat: add interval execution options for TimerInput component

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
@@ -47,4 +47,14 @@
             }
         }
     }
+
+    &-exec-interval {
+        display: flex;
+        gap: @margin-xs;
+
+        > .@{mui-prefix}FormControl-root {
+            flex: 1;
+            margin: 0;
+        }
+    }
 }
