feat: dashboard ui style ajustment phase 1

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -132,7 +132,7 @@
             height: 100%;
             overflow: hidden;
             background: var(--main-background);
-            border-radius: @border-radius-base;
+            border-radius: @border-radius-md;
 
             &-main {
                 display: flex;
@@ -203,10 +203,6 @@
         .dashboard-custom-resizable-handle {
             display: none;
         }
-    }
-
-    .react-grid-item:hover {
-        z-index: 10;
     }
 
     .react-resizable-handle {
