--- a/apps/web/src/plugin/plugins/trigger/view/style.less
+++ b/apps/web/src/plugin/plugins/trigger/view/style.less
@@ -6,7 +6,7 @@
     padding: @padding-md;
     background: var(--main-background);
     border: 1px solid transparent;
-    border-radius: @border-radius-base;
+    border-radius: @border-radius-md;
     cursor: pointer;
 
     &:hover {
